docs/book/samples/appa/type_order_check.kso
main = print "x"

type user
  admin:bool
  name:string
